- Try to fix fetch
Submitted by:	Motomichi Matsuzaki <mzaki@m.u-tokyo.ac.jp> (maintainer)

--- a/biology/muscle/Makefile
+++ b/biology/muscle/Makefile
@@ -24,6 +24,8 @@ DISTFILES+=	${file}:docs
 MAINTAINER=	mzaki@biol.s.u-tokyo.ac.jp
 COMMENT=	MUltiple Sequence Comparison by Log-Expectation
 
+FETCH_ARGS=	-A
+
 USE_GMAKE=	yes
 USE_DOS2UNIX=	*.cpp
 
