New port: biology/consed viewing and editing workbench for sequence assembly
	Consed is a tool for viewing, editing, and finishing sequence
	assemblies.

	The port is constituted of 4 parts:
	biology/phred: base caller with quality evaluation
	biology/phrap: sequence assembler for shotgun sequencing
	biology/consed: workbench
	biology/phd2fasta: small utility

	All these can be used separately; however, most function
	of consed depends on the others.

	Although these programs are licensed freely for academic
	and nonprofit purposes, users have to contact the authors
	to get the softwares.
	Phred (including phd2fasta) and phrap are emailed,
	and consed can be downloaded to a restricted IP address.
	For commercial users, the licensing fee is ca. $10,000 at
	the time of writing.

PR:		ports/118548
Submitted by:	Motomichi Matsuzaki <mzaki@biol.s.u-tokyo.ac.jp>

--- a/biology/Makefile
+++ b/biology/Makefile
@@ -64,6 +64,9 @@
     SUBDIR += p5-bioperl-run
     SUBDIR += p5-bioperl-run-devel
     SUBDIR += paml
+    SUBDIR += phd2fasta
+    SUBDIR += phrap
+    SUBDIR += phred
     SUBDIR += phylip
     SUBDIR += platon
     SUBDIR += povchem
