Teach the building cluster that these ports are not to be build

--- a/biology/phrap/Makefile
+++ b/biology/phrap/Makefile
@@ -16,6 +16,9 @@ MAINTAINER=	mzaki@biol.s.u-tokyo.ac.jp
 COMMENT=	Phrap is a program for assembling shotgun DNA sequence data
 
 RESTRICTED=	Redistribution is not permitted in any form. You must request the tarball via e-mail. Free for academic use.
+.if defined(PACKAGE_BUILDING)
+IGNORE=		distribution files must be obtained via the authors
+.endif
 
 NO_WRKSUBDIR=	yes
 
